--- a/.gitignore
+++ b/.gitignore
@@ -1,36 +1,36 @@
-# 依赖目录
+# Dependencies
 node_modules/
 
-# 构建输出
+# Build outputs
 dist/
 build/
 
-# 环境配置
+# Environment files
 .env
 .env.local
 .env.*.local
 
-# 编辑器配置
+# IDE files
 .vscode/
 .idea/
-*.swp
-*.swo
+*.sublime-*
 
-# 操作系统文件
-.DS_Store
-Thumbs.db
-
-# 日志文件
+# Logs
+logs/
+*.log
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
 
-# 本地配置文件
-*.local
+# System files
+.DS_Store
+Thumbs.db
 
-# 测试覆盖率报告
+# Testing
 coverage/
 
-# 临时文件
-*.log
+# Temporary files
+*.swp
+*.swo
 *.tmp
+*.temp
