--- a/.gitignore
+++ b/.gitignore
@@ -10,10 +10,15 @@ build/
 .env.local
 .env.*.local
 
-# IDE files
-.vscode/
+# IDE and editor files
 .idea/
-*.sublime-*
+.vscode/
+*.swp
+*.swo
+
+# OS files
+.DS_Store
+Thumbs.db
 
 # Logs
 logs/
@@ -22,15 +27,9 @@ npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
 
-# System files
-.DS_Store
-Thumbs.db
-
 # Testing
 coverage/
 
-# Temporary files
-*.swp
-*.swo
-*.tmp
-*.temp
+# Misc
+.cache/
+.temp/
